Get to a compiling state
Took 3 hours 41 minutes